Fix the gutter too big issue

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -14,7 +14,7 @@
     .card-wrapper{
       //height:340px;
       .card-item {
-        max-width: 400px;
+        //max-width: 400px;
         text-align: left;
         margin: 0 auto;
         background-color: #fff;
